--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.10.4",
     "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.9.1",
+    "@sendgrid/mail": "^7.7.0",
     "dotenv": "^16.0.3",
     "framer-motion": "^6.5.1",
     "next": "12.3.1",
