--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^6.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.3.0",
     "react-player": "^2.11.0",
     "three": "^0.146.0"
   },
