--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.3.0",
     "react-player": "^2.11.0",
+    "react-scroll-parallax": "^3.4.5",
     "three": "^0.146.0"
   },
   "devDependencies": {
