--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sendgrid/mail": "^7.7.0",
     "dotenv": "^16.0.3",
     "framer-motion": "^6.5.1",
+    "lucide-react": "^0.447.0",
     "next": "12.3.1",
     "nodemailer": "^6.9.0",
     "react": "18.2.0",
